--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Four Card Section</title>
     <meta charset="utf-8" />
@@ -8,12 +9,12 @@
 
 <body>
     <header>
-        <h2>
+        <h1>
             Reliable, efficient delivery
-        </h2>
-        <h2>
+        </h1>
+        <h1>
             Powered by Technology
-        </h2>
+        </h1>
         <p>
             Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful
         </p>
@@ -21,9 +22,9 @@
     <main>
         <section class="item item1">
             <article>
-                <h3>
+                <h2>
                     Supervisor
-                </h3>
+                </h2>
                 <p>
                     Monitors activity to identify project roadblocks
                 </p>
@@ -32,9 +33,9 @@
         </section><!--  section  -->
         <section class="item item2">
             <article>
-                <h3>
+                <h2>
                     Team Builder
-                </h3>
+                </h2>
                 <p>
                     Scans our talent network to create the optimal team for your project
                 </p>
@@ -43,9 +44,9 @@
         </section><!--  section  -->
         <section class="item item3">
             <article>
-                <h3>
+                <h2>
                     Karma
-                </h3>
+                </h2>
                 <p>
                     Regularly evaluates our talent to ensure quality
                 </p>
@@ -54,9 +55,9 @@
         </section><!--  section  -->
         <section class="item item4">
             <article>
-                <h3>
+                <h2>
                     Calculator
-                </h3>
+                </h2>
                 <p>
                     Uses data from past projects to provide better delivery estimates
                 </p>
